--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" >
 <head >
@@ -11,12 +12,16 @@
   <title >
     {% block title %}MyMDB{% endblock %}
   </title>
-  <style>
+  <style >
     .mymdb-masthead {
       background-color: #EEEEEE;
       margin-bottom: 1em;
     }
-  </style>
+
+    .errorlist {
+      color: #e11;
+    }
+  </style >
 
 </head >
 <body >
@@ -30,6 +35,28 @@
       >
         Movies
       </a>
+      {% if request.user.is_authenticated %}
+        <a
+            class="nav-link"
+            href="{% url 'user:logout' %}"
+        >
+          Log out
+        </a>
+      {% else %}
+        <a
+            class="nav-link"
+            href="{% url 'user:login' %}"
+        >
+          Log in
+        </a>
+        <a
+            class="nav-link"
+            href="{% url 'user:register' %}"
+        >
+          Register
+        </a>
+
+      {% endif %}
     </nav>
   </div>
 </div>
